--- a/skin/frontend/mango/default/scss/Pages/Homepage/_homepage.scss
+++ b/skin/frontend/mango/default/scss/Pages/Homepage/_homepage.scss
@@ -7,6 +7,7 @@
 
 .image-container{
 	img{
+		width:100%;
 		margin:0px auto;
 	}
 }
