--- a/skin/frontend/mango/default/scss/Pages/Shared/_header.scss
+++ b/skin/frontend/mango/default/scss/Pages/Shared/_header.scss
@@ -81,7 +81,7 @@ header{
 	.links{
 		display:block;
 		list-style: none;
-		text-align:center;
+		text-align:right;
 		text-transform: uppercase;
 		padding:0px;
 		width:100%;
