--- a/skin/frontend/mango/default/scss/Pages/Shared/_mini-menus.scss
+++ b/skin/frontend/mango/default/scss/Pages/Shared/_mini-menus.scss
@@ -2,7 +2,7 @@
 
 #mini-menu-account {
 	position: absolute;
-	right:20%;
+	right:0%;
 	top: 50px;
 	font-size: 0.75em;
 	width: 250px;
@@ -11,7 +11,7 @@
 #mini-menu-cart {
 	@extend #mini-menu-account;
 	font-size:1em;
-	right:17%;
+	right:0%;
 	top: 50px;
 	width:370px;
 
